--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import "books";
 @import "variables";
 @import "topbutton";
+@import "header";
 
 html {
     box-sizing: border-box;
@@ -34,3 +35,4 @@ p{
     font-weight: 400;
     color: wheat;
 }
+
