--- a/app/scss/_readers.scss
+++ b/app/scss/_readers.scss
@@ -1,12 +1,13 @@
 table{
   margin: auto;
+  font-size: .9rem;
 }
 table, th, td{
     border: 1px solid #ddd;
     border-collapse: collapse;
 
     th, td{
-        padding: 5px 10px 5px 5px;
+      padding: 5px 8px 5px 5px;
     }
 
 }
