--- a/app/scss/_books.scss
+++ b/app/scss/_books.scss
@@ -11,7 +11,7 @@
   
   
   #our-books .book-wrap {
-    background: #f1f1f1;
+    background: #b8932f;
     padding: 15px;
     border: 1px solid #808080;
     border-radius: 8px;
@@ -36,5 +36,5 @@
   
   #our-books .book-desc {
     margin-top: 10px;
-    color: #848484;
+    color: #010101;
   }
