--- a/app/scss/_reader_bookloan.scss
+++ b/app/scss/_reader_bookloan.scss
@@ -17,7 +17,7 @@ caption{
   
 #bookloan{
     width: 90%;
-    background-color: azure;
+    background-color: #b8932f;;
     opacity: .8;
     font-size: .9rem;
     
@@ -39,6 +39,6 @@ caption{
         }
     }
     tr:nth-child(even){
-        background-color: #f2f2f2;
+        background-color: #7c6a04;
     }
 }
