--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 @import "header";
 @import "readers";
 @import "reader_bookloan";
+// @import "tooltip";
 
 html {
     box-sizing: border-box;
@@ -37,4 +38,3 @@ p{
     font-weight: 400;
     color: wheat;
 }
-
