--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "topbutton";
 @import "header";
+@import "footer";
 @import "readers";
 @import "reader_bookloan";
 @import "forms";
