--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -16,6 +16,13 @@ nav{
             font-weight: 700;
             color:aliceblue;
             text-decoration: none;
+
+            .disabled{
+                pointer-events: none;
+                /* for "disabled" effect */
+                opacity: 0.5;
+                background: #CCC;
+            }
         }
     }
 }
