--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -14,15 +14,16 @@ nav{
         a{
             padding: 1rem;
             font-weight: 700;
-            color:aliceblue;
+            color:rgb(79, 166, 241);
             text-decoration: none;
 
-            .disabled{
-                pointer-events: none;
-                /* for "disabled" effect */
-                opacity: 0.5;
-                background: #CCC;
-            }
         }
     }
+}
+
+.disabled{
+    pointer-events: none;
+    /* for "disabled" effect */
+    opacity: 0.5;
+    background: #CCC;
 }
