--- a/app/scss/_readers.scss
+++ b/app/scss/_readers.scss
@@ -12,14 +12,14 @@ table, th, td{
 
 }
 
-#readers{
-    background-color: azure;
-    opacity: .6;
+// #readers{
+//     background-color: azure;
+//     opacity: .6;
 
-    td:nth-child(6){
-        text-align: center;
-    }
-}
+//     td:nth-child(6){
+//         text-align: center;
+//     }
+// }
 
 #our-readers {
     max-width: 1200px;
