--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -37,17 +37,23 @@ input[type=submit] {
   /* Floating column for labels: 25% width */
   .col-25 {
     float: left;
-    width: 35%;
+    width: 25%;
     margin-top: 6px;
   }
   
   /* Floating column for inputs: 75% width */
-  .col-75 {
+  .col-60 {
     float: left;
-    width: 65%;
+    width: 60%;
     margin-top: 6px;
   }
 
+  .col-15{
+    float:left;
+    width: 15%;
+    margin-top: 6px;
+    padding-top: 10px;
+  }
 
   /* Clear floats after the columns */
 .row:after {
@@ -57,8 +63,13 @@ input[type=submit] {
   }
   
   @media screen and (max-width: 600px) {
-    .col-25, .col-75, input[type=submit] {
-      width: 100%;
+    .col-15, .col-25, .col-60, input[type=submit] {
+      width: 80%;
       margin-top: 0;
     }
+  }
+
+  .form_error{
+    display: inline;
+    color: red;
   }
