--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -46,6 +46,10 @@ input[type=submit] {
     float: left;
     width: 60%;
     margin-top: 6px;
+
+    p , span{
+      color: #000000;
+    }
   }
 
   .col-15{
