--- a/app/scss/_modal.scss
+++ b/app/scss/_modal.scss
@@ -12,7 +12,6 @@
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-
  /* Modal Header */
  .modal-header {
     padding: 2px 16px;
@@ -35,20 +34,36 @@
   /* Modal Content */
   .modal-content {
     position: relative;
-    font-weight:700;
-    line-height:1.5;
+    font-weight:600;
+    line-height:1.3;
     background-color: #574d4d;
     margin: auto;
     padding: 0;
     border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    width: 70%;
+    box-shadow: 0 5px 9px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 1.8s
   }
   
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #444;
+  text-decoration: none;
+  cursor: pointer;
+}
+
   /* Add Animation */
   @keyframes animatetop {
-    from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
+    from {top: -500px; opacity: 0}
+    to {top: 0; opacity: .9}
   } 
