--- a/app/scss/_modal.scss
+++ b/app/scss/_modal.scss
@@ -10,41 +10,42 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+
+  /* Modal Header */
+  &-header {
+     padding: 2px 16px;
+     background-color: #010101;
+     color: #e6d7d7;
+     font-weight: 700;
+   }
+
+   /* Modal Body */
+   &-body {
+     padding: 2px 16px;}
+   
+   /* Modal Footer */
+   &-footer {
+     padding: 2px 16px;
+     background-color: #010101;
+     color: #e6d7d7;
+   }
+   
+   /* Modal Content */
+   &-content {
+     position: relative;
+     font-weight:600;
+     line-height:1.3;
+     background-color: #574d4d;
+     margin: auto;
+     padding: 0;
+     border: 1px solid #888;
+     width: 70%;
+     box-shadow: 0 5px 9px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+     animation-name: animatetop;
+     animation-duration: 1.8s
+   }
 }
 
- /* Modal Header */
- .modal-header {
-    padding: 2px 16px;
-    background-color: #010101;
-    color: #e6d7d7;
-    font-weight: 700;
-  }
-  
-  /* Modal Body */
-  .modal-body {
-    padding: 2px 16px;}
-  
-  /* Modal Footer */
-  .modal-footer {
-    padding: 2px 16px;
-    background-color: #010101;
-    color: #e6d7d7;
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    position: relative;
-    font-weight:600;
-    line-height:1.3;
-    background-color: #574d4d;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 70%;
-    box-shadow: 0 5px 9px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    animation-name: animatetop;
-    animation-duration: 1.8s
-  }
   
 
 /* The Close Button */
@@ -53,13 +54,13 @@
   float: right;
   font-size: 28px;
   font-weight: bold;
-}
 
-.close:hover,
-.close:focus {
-  color: #444;
-  text-decoration: none;
-  cursor: pointer;
+  &:hover,
+  &:focus {
+    color: #444;
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
 
   /* Add Animation */
