--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -26,6 +26,7 @@ input[type=submit] {
 }
 
 
+
 .container {
     width: 80%;
     border-radius: 5px;
@@ -57,6 +58,17 @@ input[type=submit] {
     width: 30%;
     margin-top: 6px;
     padding-top: 10px;
+
+    a {
+      text-decoration: none;
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      float: right;
+    }
   }
 
   /* Clear floats after the columns */
