--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -1,5 +1,5 @@
 /* Style inputs, select elements and textareas */
-input[type=text], select, textarea{
+input[type=text], input[type=email], input[type=url], select, textarea{
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
