--- a/app/scss/_topbutton.scss
+++ b/app/scss/_topbutton.scss
@@ -2,7 +2,8 @@
         display: none; /* Hidden by default */
         position: fixed; /* Fixed/sticky position */
         bottom: 25px; /* Place the button at the bottom of the page */
-        right: 25px; /* Place the button 30px from the right */
+        // right: 25px; /* Place the button 30px from the right */
+        left: 85%;
         z-index: 99; /* Make sure it does not overlap */
         border: none; /* Remove borders */
         outline: none; /* Remove outline */
