--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,11 +1,11 @@
-nav{
-    width: fit-content;
-    height: auto;
-    background: rgba(138, 123, 83, 0.8);
-    position: sticky;
-    top: 0;
-    overflow: hidden;
-    }
+// nav{
+    // width: fit-content;
+    // height: auto;
+    // background: rgba(138, 123, 83, 0.8);
+    // position: sticky;
+    // top: 0;
+    // overflow: hidden;
+    // }
 
 .header{
     &__menu{
@@ -34,3 +34,71 @@ nav{
     background: #441503;
     color: #6e6242;
 }
+
+.navbar {
+    // position: fixed;
+    top: 0;
+    overflow: hidden;
+    // background-color: #333;
+    background: rgba(138, 123, 83, 0.9);
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn {
+    // background-color: red;
+    background-color: #441503;
+    color: white;
+
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    // background-color: #ddd;
+    background-color: #441503;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
