--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,13 +33,16 @@ body{
 }
 
 h1{
+    margin-top: 1rem;
+    margin-left: 2rem;
+    padding-bottom: 0.5rem;
     font-size: 2.8rem;
     font-weight: 700;
     color: whitesmoke;
-    padding-bottom: 1rem;
 }
 
 p{
+    margin-left: 3rem;
     font-weight: 400;
     color: wheat;
 }
@@ -47,7 +50,10 @@ p{
 .error{
     width: 70%;
     margin:auto;
-    background-color: rgba($color: #fff, $alpha: .4);
+    border-radius: 6px;
+    background-color: rgba($color: #fff, $alpha: .5);
+    box-shadow: 2px 4px 4px 4px rgba(#000000, .8);
+
     h1, h2{
         padding-left: 0.8rem;
         font-weight: 700;
@@ -55,9 +61,9 @@ p{
     }
 
     p, a {
-        padding: 1rem;
+        padding: 0.5rem;
         margin: 1.5rem;
-        font-size: 1.2rem;
+        font-size: 1rem;
         color: #fff;
     }
     
@@ -66,10 +72,12 @@ p{
     
         &:hover{
         cursor: pointer;
+        padding-top: 0.2rem;
         background-color: rgba($color: #fff, $alpha: .8);
-        border-radius: 20px;;
-        color: red;
-        font-size: 1.4rem;
+        box-shadow: 6px 6px 6px 4px rgba(#000000, .6);
+        border-radius: 15px;
+        color: black;
+        font-size: 1.1rem;
         }
     }
 }
