--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -37,10 +37,10 @@
 
 .navbar {
     // position: fixed;
-    top: 0;
+    // top: 0;
     overflow: hidden;
     // background-color: #333;
-    background: rgba(138, 123, 83, 0.9);
+    background-color: rgba(138, 123, 83, 0.9);
   }
   
   .navbar a {
@@ -56,7 +56,31 @@
     float: left;
     overflow: hidden;
   }
+
+  .navbar .search-container {
+    float: right;
+  }
   
+  .navbar input[type=search]{
+    // float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 0px;
+    font-size: 16px;
+  }
+
+  .navbar .search-container button {
+    float: right;
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: rgba(138, 123, 83, 0.9);;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
   .dropdown .dropbtn {
     font-size: 16px;  
     border: none;
@@ -75,6 +99,12 @@
 
   }
   
+  .search-container button:hover {
+    background: #441503;
+    color: #fff;
+  }
+  
+
   .dropdown-content {
     display: none;
     position: absolute;
@@ -102,3 +132,23 @@
     display: block;
   }
   
+  @media screen and (max-width: 600px) {
+
+  .navbar .search-container {
+    float: none;
+  }
+    
+   .navbar .dropdown, .navbar a, .navbar input[type=search], .navbar .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+   }
+
+   .navbar input[type=search]{
+    border: 1px solid #ccc;
+   }
+
+  }
