Added basic search functionality.

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -64,6 +64,7 @@
   .navbar input[type=search]{
     // float: right;
     padding: 6px;
+    border-radius: 8px;
     border: none;
     margin-top: 8px;
     margin-right: 0px;
