--- a/app/scss/_authordetails.scss
+++ b/app/scss/_authordetails.scss
@@ -3,7 +3,10 @@
     width: 60%;
     background-color: rgba(#010101, 0.8);
     margin: 1rem auto auto auto;
-    padding: 0.5rem;
+    padding: 1.5rem;
+    border-radius: 12px;
+    line-height: 1.4;
+    overflow-y: scroll;
 }
 #fullname{
     padding: 0.5rem;
