--- a/app/scss/_authordetails.scss
+++ b/app/scss/_authordetails.scss
@@ -1,16 +1,47 @@
 .authordetail{
     display: block;
-    width: 60%;
+    width: 70%;
     background-color: rgba(#010101, 0.8);
     margin: 1rem auto auto auto;
     padding: 1.5rem;
     border-radius: 12px;
-    line-height: 1.4;
-    overflow-y: scroll;
+    line-height: 1.3;
+    text-align: justify;
+    overflow-y: auto;
+
 }
+
+.btnclose{
+    float: right;
+}
+
+.btnbooksauthor{
+    button{
+        margin: .5rem;
+        background-color: #4CAF50;
+        color: white;
+        padding: 0.5rem;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+}
+
 #fullname{
     padding: 0.5rem;
     font-size: 1.4rem;
     font-weight: 400;
     color: aliceblue;
+}
+
+#hidebooks{
+    display: none;
+}
+
+#txtHint{
+    a{
+        text-decoration: none;
+        color: white;
+        cursor: pointer;
+    }
 }
