--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -30,7 +30,7 @@ input[type=submit] {
 .container {
     width: 80%;
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: #8a7b53;
     padding: 20px;
     margin: auto;
   }
@@ -49,7 +49,7 @@ input[type=submit] {
     margin-top: 6px;
 
     p , span{
-      color: #000000;
+    color: #000000;
     }
   }
 
@@ -57,8 +57,12 @@ input[type=submit] {
     float:left;
     width: 30%;
     margin-top: 6px;
-    padding-top: 10px;
+    // padding-top: 10px;
 
+    p , span{
+      color: #000000;
+      }
+    
     a {
       text-decoration: none;
       background-color: #4CAF50;
