--- a/app/scss/_reader_bookloan.scss
+++ b/app/scss/_reader_bookloan.scss
@@ -13,15 +13,20 @@ caption{
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     align-items: stretch;
     grid-gap: 10px;
-  }
-  
+}
+
 #bookloan{
     width: 90%;
     background-color: #b8932f;;
     opacity: .8;
     font-size: .9rem;
+    color: #fff;
     
     td{
+        a{
+            text-decoration: none;
+            color: #010101;
+        }
         &:nth-child(1){
             text-align: right;
         }
