--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -26,7 +26,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Kumbh Sans', sans-serif;
-    background-image: url('/images/pexels-cottonbro-6344226a.jpg');
+    background-image: url('/images/pexels-cottonbro-6344226a.jpg.202103182131');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
