--- a/app/scss/_readerdetails.scss
+++ b/app/scss/_readerdetails.scss
@@ -1,4 +1,4 @@
-.authordetail{
+.readerdetail{
     display: block;
     width: 70%;
     background-color: rgba(#010101, 0.8);
@@ -13,9 +13,13 @@
 
 .btnclose{
     float: right;
+    margin-right: 20px;
 }
 
-.btnbooksauthor{
+.btnsdiv{
+    width: 89%;
+    margin: auto;
+    
     button{
         margin: .5rem;
         background-color: #4CAF50;
@@ -24,6 +28,23 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
+    }
+
+}
+.btnbookssuggested{
+    button{
+        margin: .5rem;
+        background-color: #4CAF50;
+        color: white;
+        padding: 0.5rem;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+
+        a{
+            text-decoration: none;
+            color: white;
+        }
     }
 }
 
@@ -38,7 +59,7 @@
     display: none;
 }
 
-#txtSuggestion{
+#txtSuggestions{
     a{
         text-decoration: none;
         color: white;
