--- a/app/scss/_readerdetails.scss
+++ b/app/scss/_readerdetails.scss
@@ -20,7 +20,7 @@
     width: 89%;
     margin: auto;
     
-    button{
+    button, a{
         margin: .5rem;
         background-color: #4CAF50;
         color: white;
@@ -28,11 +28,12 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
+        
     }
 
 }
 .btnbookssuggested{
-    button{
+    button, a{
         margin: .5rem;
         background-color: #4CAF50;
         color: white;
@@ -40,6 +41,8 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
+        text-decoration: none;
+    
 
         a{
             text-decoration: none;
