--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -1,5 +1,5 @@
 /* Style inputs, select elements and textareas */
-input[type=text], input[type=email], input[type=url], select, textarea{
+input[type=text], input[type=email], input[type=url], input[type=password], select, textarea{
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #ccc;
@@ -33,8 +33,6 @@ input[type=submit] {
   float: right;
 }
 
-
-
 .container {
     width: 80%;
     border-radius: 5px;
@@ -59,6 +57,13 @@ input[type=submit] {
     p , span{
     color: #000000;
     }
+
+    a{
+      font-size: 0.8rem;
+      text-decoration: none;
+
+    }
+    
   }
 
   .col-30{
