Functional login. Needs code review in all pages.

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -157,7 +157,7 @@
   .login{
     float: right;
     
-    #logout{
-      display:none;
-    }
+    // #logout{
+    //   display:none;
+    // }
   }
