--- a/app/scss/_authordetails.scss
+++ b/app/scss/_authordetails.scss
@@ -24,6 +24,10 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
+
+        &:hover{
+            background-color: #333333;
+        }
     }
 }
 
