Changes in some files and functions.

--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -36,7 +36,7 @@ input[type=submit] {
 .container {
     width: 80%;
     border-radius: 5px;
-    background-color: #8a7b53;
+    background-color: #8a7b53f5;
     padding: .4rem;
     margin: 1rem auto;
   }
