--- a/app/scss/_modal.scss
+++ b/app/scss/_modal.scss
@@ -66,3 +66,8 @@
     from {top: -500px; opacity: 0}
     to {top: 0; opacity: .9}
   } 
+
+  /* Image place */
+  .bookimage{
+    float: right;
+  }
